--- a/3.2 GetProps/nbproject/private/private.properties
+++ b/3.2 GetProps/nbproject/private/private.properties
@@ -1,6 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+do.jlink=false
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/ramon/.netbeans/8.0.2/build.properties
+jlink.strip=false
+user.properties.file=C:\\Users\\jmfdiaz\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
